Fix spacing of search result list items

--- a/app/assets/stylesheets/components/_lists.scss
+++ b/app/assets/stylesheets/components/_lists.scss
@@ -8,3 +8,13 @@
   content: "—";
   left: -30px
 }
+
+.gem-c-cards__list--one-column .gem-c-cards__list-item {
+  border-top: 1px solid #b1b4b6;
+  padding-top: 19px
+}
+
+.gem-c-cards__list--one-column .gem-c-cards__list-item:first-child {
+  border-top: 0;
+  padding-top: 0
+}
